# MewChain

./: .env  .gitignore  Cargo.toml  Dockerfile  README.md
src/: main.rs
static/: createWallet.html  getWallet.html  historyWallet.html  importWallet.html  index.html  mainWallet.html  menuWallet.html  miner.html  other.html  receive.html  send.html  sentWallet.html  staking.html
static/menu/: faucet.html  info.html  staking.html  task.html
