[package]
name = "mewchain"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
chrono = "0.4"
actix-web = "4"
bip39 = { version = "2.0", features = ["rand"] }
rand = "0.8"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["full"] }
actix-cors = "0.6"
actix-files = "0.6"
dotenv = "0.15.0"
lazy_static = "1.4.0"
rusqlite = { version = "0.29.0", features = ["bundled"] }
