[package]
name = "mew_chain"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"                                      # Веб-сервер
tokio = { version = "1.0", features = ["full"] }  # Асинхронный движок
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
chrono = "0.4"
firestore = "0.43"
teloxide = { version = "0.12", features = ["macros"] }
ed25519-dalek = { version = "2.0", features = ["rand_core"] } # Криптография как в Solana
rand = "0.8"                                                 # Генератор случайных чисел
hex = "0.4"                                                  # Для превращения ключей в читаемый текст
dotenvy = "0.15.7"
tower-http = { version = "0.5", features = ["fs"] }
bip39 = "2.0"